static/css/override.css
body {
	margin-top: initial;
	line-height: initial;
  color: WhiteSmoke !important;
}

b, strong {color: SeaShell;}

.portrait-title h1 {
	color: white;
}
 
input {
	color: black;
}

button, html input[type="button"] {
	background-color: orange;
	border-radius: 5px;
}

input, select, textarea{
  width: 100%;
  max-width: 100%;
  padding: 5px;
  margin: 5px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  resize: vertical;
  cursor: pointer;
  float: initial;
}

label {
  padding: 6px 6px 6px 0;
  display: inline-block;
}

.form-container {

	width: 100%;
}

.form-component {
	width: 100%;
	margin: 10px 0px 10px 0px;
	content: "";
	display: table;
	clear: both;
}

.form-select {

}

.form-label {
	float: left;
	width: 20%;
	max-width: initial;
	margin: 0px 5px 0px 5px;
	font-family: "Lucida Console", Monaco, monospace;
	font-weight: normal;
	font-size: 75%;
}

.form-input {
	float: left;
	width: 70%;
	max-width: initial;
	color: black;
	margin: 0px 5px 0px 5px;
}

.form-button-container {
		text-align: right;
}

.form-desc {
	clear: both;
	font-size: 50%;
	color: DarkGrey;
}

.form-option {
	color: white;
	width: auto;
	display: inline-block;
	margin-right: 10px;
}

input[type="checkbox"], input[type="radio"] {
	display: inline-block;
	width: auto;
}

@media screen and (max-width: 600px) {
  .form-label, .form-input, input[type=submit] {
    width: 100%;
    margin-top: 0;
  }
}

.navbar-fixed-bottom, .navbar-fixed-top {
	position: initial;
}


.navbar-brand, .navbar-nav li a {
}

.breadcrumb-container {

}

.breadcrumb {
	margin: 20px 0px 5px 0px;
	padding: 5px 10px;
	background-color: #282A36;
	text-align: right;
}

.navbar-collapse {

}

.navbar-nav .breadcrumb .navbar-right {
	margin: 0px;
	padding: 0px;
	max-height: initial;
	height: initial;
}

.breadcrumb li a {
	font-size: 80%;
}

.home-section  {
	padding: 25px 0px;
}

.article-container {
    max-width: 760px;
    padding: 10px 20px 0px;
    margin: 0px auto;
}

ul.ul-edu li .description p.type {
  font-size: 0.8rem;
}

img {max-width:100%; height:auto;}

.imgTitle {
	width: 50px;
}

.content-block-wrap {
  width: 46.50%;
  vertical-align: top;
}

.content-block-wrap img {
  margin: 0;
  margin-right: 0.5em;
  float: left;
}

.clearfix {
  content: "";
  clear: both;
  display: table;
}

.fa-li {color: orange;}

#profile .portrait-title [itemprop="service-category"] {
	font-size: small;
}

#profile .portrait-title [itemprop="connectorand"] {
  margin: 10px 0 0 0;
}

#profile .portrait-title [itemprop="mission"] {
  margin: 10px 0 0 0;
}

#profile .portrait-title [itemprop="jobTitle"] {
	margin: 0;
}

.article {
}
.article-header-caption {
  position: absolute;
  bottom: 8px;
  right: 16px;
}

.article-header-caption a:link {color: orange;}
.article-header-caption a:hover {text-decoration: underline;}

.article-header {
	position: relative;
}

.article-header img {
  max-width: 100%;
  height: auto;
  text-align: center;
  color: white;
}

.article-banner {
	display: block;
  margin-left: auto;
  margin-right: auto;
  width: auto;
  max-width:100%;
  
  box-shadow: 1px 1px 0px #edefed, -1px -1px 0px #edefed, 1px -1px 0px #edefed, -1px 1px 0px #edefed;
  margin-top: 60px;
  margin-bottom: 60px;
  padding-left: 0;
  padding-right: 0;
}

.service-price-table {
	margin: 25px;
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
	align-items: stretch;
	flex-wrap: wrap;
	border: 1px solid black;
	margin-left: auto;
	width: auto;
	max-width: 300px;

}

.service-price-table-long {
	margin: 25px;
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
	align-items: stretch;
	flex-wrap: wrap;
	border: 1px solid black;
	margin-left: auto;
	width: auto;
}

.price-data-label {
	flex: 2 0 0;
	padding: 10px;
	background-color: Orange;
	text-align: center;
	white-space: no-wrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

.price-adjustment-label {
	flex: 2 0 0;
	padding: 10px;
	background-color: DarkGrey;
	text-align: center;
	white-space: no-wrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

.price-data-item {
	flex: 1 0 0;
	font-size: 125%;
	font-weight: bold;
	padding: 5px;
	background-color: LightGray;
	text-align: left;
	color: orange;
}


.quote-panel-container {
	margin: 25px;
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
	align-items: stretch;
	flex-wrap: wrap;
	border: 1px solid black;
	margin-left: auto;
	width: auto;
	max-width: 300px;
}

.quote-panel-label {
	flex: 2 0 0;
	max-width: 200px;
	padding: 10px;
	background-color: Orange;
	text-align: center;
}

.quote-panel-item {
	width: 100%;
	flex: 1 0 0;
	max-width: 225px;
	font-size: 125%;
	font-weight: bold;
	background-color: DarkGrey;
	text-align: center;
	color: orange;
}

.quote-panel-button {
	padding: 5px;
	width: auto;
	background-color: white;
}


.quote-panel-button , .quote-panel-button:visited, .quote-panel-button:hover {
	margin: 2px;
	border: 1px solid black;
	border-radius: 5px;
}

.quote-panel-button:link  {
	background-color: white;
	text-decoration: none;
}

.quote-panel-button:visited {
	background-color: white;
	text-decoration: none;
}

.quote-panel-button:hover  {
	background-color: grey;
	text-decoration: none;
}

.quote-panel-button a:hover  {
	text-decoration: none;
}

.contact-info-table {
	font-size: 125%;
	display: flex;
	flex-direction: row;
	justify-content: center;
	flex-wrap: wrap;
	width: 100%;
	padding: 5px;
}

.contact-info-group {
	margin: 5px;
	border: 1px solid orange;
	border-radius: 10px;

}

.contact-info-label {
	font-family: impact;
	line-height: normal;
	margin: 5px 5px 0px 5px;
	padding: 0px 5px;
	color: White;
	text-align: center;
}

.contact-info-item {
	line-height: normal;
	margin: 0px 5px 5px 5px;
	padding: 0px 5px;
	color: LightGray;
	text-align: center;
}

.title-container {
}

.title-image {
	display: inline-block;
	vertical-align: middle;
	padding: 5px;
	margin-top: 20px;
	margin-bottom: 10px;
}

.title-item {
	display: inline-block;
	vertical-align: middle;
}

#imgCompareContainer {
	display: flex;
	flex-direction: row;
	justify-content: center;
	flex-wrap: wrap;
	width: 100%;
	padding: 5px;
}

.imgCompareLeft {
	Width: 50%;
}

.imgCompareRight {
	Width: 50%;
}

.imgCompare {

}

/* Service Priority CSS */

.emoji-priority {
  width: 70%;
  margin-left: 15%;
  margin-right: 15%;
} 

/* accessibility */

.access {
	display: none;
}

/* icon styles */

#contact.home-section .fa-li {
}

.fa-ul > li {
	padding-top: 0.5rem;
	margin-bottom: 0.5rem;
}

/*************************************************
 *  Biography
 **************************************************/

ul.ul-edu li .description p.method {
  font-size: 0.75rem;
  color: rgba(0,0,0,0.6);
}

ul.ul-edu li .description p.type {font-size: 0.60rem;}

/*************************************************
 *  Dark themed components
 **************************************************/

.dark ul.ul-edu li .description p.method {
  color: rgba(255, 255, 255, 0.6);
}

/* Panel Styling */

.panel-group .panel-heading + .panel-collapse > .panel-body {
	border-top: 0px;
	background-color: #141622;
}

.panel-default > .panel-heading{
	background-color: #282A36;
	border: 1px solid black;
}

.panel-title {
	font-size: 1.75rem;
}

.panel-body {

}

.panel-default {
	border: 0px;

}

.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {max-height: none;}

/* Newsletter Markup */

.cs-header-image-containor {
			display: block;
		margin-left: auto;
		margin-right: auto;
		width: 50%;
			max-width: 483px;
		}

		.cs-header-image {
			width: 100%;
		}

		.cs-page-title {
			color: #98A6AD;
			font-family: "Montserrat",sans-serif;
			text-align: center;
		}


		.cs-page-body {
			padding: 25px;
			background-color: gold;
			color: black;
			border-radius: 15px 15px 15px 15px;
			margin: 0px 25px 25px 25px;
		}

		.cs-header-containor {
			text-align: center;
		}


		.cs-article-header-containor {
		border-style: solid;
		border-width: 5px;
		border-color: #141622;
		border-radius: 15px 15px 0px 0px;
		margin: 25px 25px 0px 25px;
		}

		.cs-image-containor {
			width: 45%;
			display: inline-block;
			padding: 10px;
			vertical-align: middle;


		}

		.cs-image-body {
			margin-top: 25px;
			width: 100%;
		}

		.cs-article-title {
			display: inline-block;
			padding: 5px;
			vertical-align: middle;
			padding: 10px;
		}

		.cs-article-body {
			background-color: #141622;
			padding: 25px;
			margin: 0px 25px 100px 25px;
		}
    
    /* Menu Styling */
.mega-nav {
/* Below is the styling I want to apply to allow the megamenu to expand horizontically, but it looks like display attrubites are not work with the dropdown toggling hiding */
/*  display: flex; !important; */
  position: relative; !important;
}


.contact2-field {display: hidden;}

.alert-container {
	font-size: 80%;
	color: black;
	padding: 25px;
	margin-bottom: 25px;
	background-color: orange;
	border-radius: 5px;
}

.alert-container a {color: white;}

.alert-container p {margin-bottom: 0px;}

.alert-container h4 {
  color: white; 
  text-align: center; 
  padding-top: -10px; 
  margin-top: -10px;"
}

/* flexbox table styles for tabular data */

.divResContainer {
  background-color: rgb(60, 67, 80);
  padding: 1em;
  border-radius: 0.5em;
}

.divResContainerHeader {
  font-size: 125%;
  font-weight: bold;
  text-align: center;
  color: CadetBlue !important;
}

.divResContainerFooter {
  font-size: 145%;
  font-weight: bold;
  text-align: center;
  color: CadetBlue;
}

.divResContainerFooterDesc {
  font-size: 85%;
  text-align: center;
  color: CadetBlue;
}

.divResTable{
	display: flex;
  margin: 1em 0 0 0;
  padding: 0;
  align-items: flex-start;
  background-color: rgb(50, 52, 64);
}

.divResTable--6cols > .divResTableCell  { width: 16.4%; }

.divResTable--5cols > .divResTableCell  { width: 20%; }

.divResTable--4cols > .divResTableCell  { width: 25%; }

.divResTable--3cols > .divResTableCell  { width: 33.33%; }

.divResTable--2cols > .divResTableCell  { width: 50%; }


.divResTable--3cols {
  margin-bottom: 25px;
}

.divResTableHeading {
  text-align: center;
  background-color: initial;
  border-bottom: 2px solid #ddd;
}

.divResTableTitle {
  font-size: xx-large;
  text-align: center;
}

.divResTableCell {
	box-sizing: border-box;
  width: 100%;  // Default to full width
  padding: 0.8em 1.2em;
  overflow: hidden; // Or flex might break
}

.divResTableHeadDesc {
  font-size: small;
  text-align: center;
}
  
.divResTableFoot {
  text-align: center;
	font-size: x-large;
  font-weight: bold;
}

.divResTableButtonCenter {
  text-align: center;
}

.divResTableButton {
  margin: 1em;
  display: inline-block;
  width: auto;
  border-radius: 0.5em;
  padding: 1em;
  background-color: CadetBlue;
  text-align: center;
	font-size: small;
  font-weight: bold;
}

.divResTableButton a:link {
  color: white;
}

.divResTableButton a:hover {
  margin: -1em;
  display: inline-block;
  width: auto;
  border-radius: 0.5em;
  padding: 1em;
  color: black;
  background-color: white;
  text-decoration: underline;
}

.divResTableBreak {
  margin-bottom: 25px;
}

.divResTableBody {
	display: table-row-group;
}


.priority-header1 {
  background: MediumSeaGreen;
}

.priority-cell1 { 
  background: ForestGreen;
}

.priority-header2 {
  background: GoldenRod;
}

.priority-cell2 { 
  background: DarkGoldenRod;
}

.priority-header3 {
  background: LightSteelBlue;
}

.priority-cell3 { 
  background: LightSlateGray;
}

@media all and (max-width: 500px) {
  .divResTable--collapse {
    display: block;
  }
  .divResTable--collapse > .divResTableCell {
    width: 100% !important;
  }
  .divResTable--collapse > .divResTableCell--foot {
    margin-bottom: 1em;
  }
}
.no-flexbox .Rtable {
  display: block;
}
.no-flexbox .Rtable > .Rtable-cell {
  width: 100%;
}
.no-flexbox .Rtable > .Rtable-cell--foot {
  margin-bottom: 1em;
}

.frame-element-center {text-align: center;}
.g-recaptcha {display: inline-block;}

